// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tooltip isVisible false 1`] = `
<div
  style={
    Object {
      "position": "relative",
      "width": "65px",
    }
  }
>
  <div
    className="sc-bdVaJa EXKLM"
  >
    <div
      className="sc-bwzfXH fehTEF"
    >
      Hey yo
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip isVisible true 1`] = `
<div
  style={
    Object {
      "position": "relative",
      "width": "65px",
    }
  }
>
  <div
    className="sc-bdVaJa EXKLM"
  >
    <div
      className="sc-bwzfXH gpeonG"
    >
      Hey yo
    </div>
  </div>
</div>
`;
